Travis now generates a documentation for lifthrasiir/rust-zip.
note that this does *not* work for slackito/rust-zip, unfortunately.
the generated documentations would be available at:
http://rust-ci.org/lifthrasiir/rust-zip/doc/zip/

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+env:
+  global:
+    - secure: GZkI7Z+vLvPQHraoiG2p++j23pbfBUA5+2d/VEj8g8gC7bZOpQuCr87aYxD+TjhRFmvQ9KXc3VvDHjisbQMKh1zxy8UT97lWlIryhTVoB5A29acrzxNnhFgYujxLYojXQEnMGgRBxD48sdrXzAxDes29TIdpMLZ1WW7U0MGQWyY=
 #before_install:
 #  - yes | sudo add-apt-repository ppa:hansjorg/rust
 #  - sudo apt-get update
@@ -8,7 +11,11 @@ install:
 script:
   - mkdir target
   - rustc src/zip/lib.rs --out-dir=target
+  #- rustdoc --test src/zip/lib.rs -L target
   - rustc src/zip-demo/main.rs --out-dir=target -L target
+  - rustdoc src/zip/lib.rs
 branches:
   only:
     - master
+after_script:
+  - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
